# SiteGaint-AutoPricing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  README.md  SiteGiant Pricing.vbs  create-shortcut.ps1  docker-compose.yml  launch.bat  pyproject.toml  requirements.txt  test_api.py
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: config.yaml
data/test/: mapping_test.xlsx  sitegiant_export_test.xlsx
docs/: generate_sitegiant_import_guide.py  generate_user_guide.py  generate_user_guide_bilingual.py
src/: __init__.py  main.py
src/exporter/: __init__.py  sitegiant_exporter.py
src/importer/: __init__.py  sitegiant_importer.py
src/mapping/: __init__.py  generate_mapping_template.py  mapping_manager.py
src/pokedata_client/: __init__.py  api_client.py  models.py
src/pricing/: __init__.py  fx_provider.py  pricing_engine.py
src/risk/: __init__.py  status_codes.py  threshold_engine.py
src/services/: __init__.py  health_service.py  pricing_service.py
src/storage/: __init__.py  encryption.py  pokedata_history_store.py  price_cache.py  price_history.py  session_store.py  settings_store.py  stats_store.py
src/utils/: __init__.py  config_loader.py  excel_utils.py  io_helpers.py  logging_config.py  logging_setup.py  pokedata_url_parser.py
src/webapp/: __init__.py  exceptions.py  helpers.py  main.py  middleware.py  routes.py  schemas.py
static/: style.css
static/js/: shader.js
templates/: base.html  explorer.html  index.html  preview.html  settings_mapping.html
tests/: __init__.py  test_api_pricing_risk_utils.py  test_encryption.py  test_exporter_and_mapping.py  test_fx_provider.py  test_importer.py  test_integration.py  test_mapping.py  test_pokedata_history.py  test_pricing_engine.py  test_safety_features.py  test_session_store.py  test_threshold_engine.py  test_webapp_helpers.py
tests/fixtures/: __init__.py  fx_mocks.py  pokedata_mocks.py
